--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 /* HEADER SPACE */
