--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body, html {
 #main-container {
     display: inline-flex;
     flex-direction: column;
-    width: 550px;
-    height: 700px;
+    width: 375px;
+    height: 812px;
     background-color: #fff;
     border-radius: 6px;
     position: absolute;
@@ -54,6 +54,7 @@ body, html {
 }
 
 #date {
+    font-size: 30px;
     margin: 0;
     color: #333;
 }
@@ -61,9 +62,14 @@ body, html {
 .list {
     display: flex;
     align-items: center;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0 20px;
+    border: 1.5px dashed rgba(0, 0, 0, 0.1);
+    padding: 0 15px;
     gap: 20px;
+}
+
+.list p {
+    margin: 15px 0;
+    font-weight: 200;
 }
 
 .list .delete {
@@ -81,18 +87,18 @@ body, html {
 }
 
 .padding {
-    padding: 20px;
+    padding: 15px;
 }
 
 .icons {
-    width: 30px;
-    height: 30px;
+    width: 1rem;
+    height: 1rem;
     cursor: pointer;
 }
 
 h1, h2 {
     font-size: 1.1rem;
-    font-weight: 300;
+    font-weight: 200;
     margin: 0;
 }
 
