--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body, html {
     height: 1rem; 
 }
 
-/* MAIN SPACE */
+/* TIME AND DATE */
 
 #date-time {
     margin-top: 30px;
@@ -59,6 +59,15 @@ body, html {
     color: #333;
 }
 
+/* MAIN CONTENT */
+
+#main-content {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 .list {
     display: flex;
     align-items: center;
@@ -76,14 +85,26 @@ body, html {
     margin-left: auto;
 }
 
+.todo-input {
+    margin: 15px 0;
+    font-weight: lighter;
+    border: none;
+    background: none;
+    font-size: 1rem;
+    color: #333;
+    outline: none;
+}
+
 /* FOOTER SPACE */
 
-#footer {
+.footer {
     display: flex;
     align-items: center;
     margin-top: auto;
     border-top: 2px solid rgba(0, 0, 0, 0.1);
     gap: 20px;
+    cursor: pointer;
+    user-select: none;
 }
 
 .padding {
