--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
 #main-container {
     display: inline-flex;
     flex-direction: column;
-    width: 375px;
+    width: 500px;
     height: 812px;
     background-color: #fff;
     border-radius: 6px;
@@ -74,6 +74,7 @@ body, html {
     border: 1.5px dashed rgba(0, 0, 0, 0.1);
     padding: 0 15px;
     gap: 20px;
+    justify-content: space-between;
 }
 
 .list p {
@@ -81,11 +82,12 @@ body, html {
     font-weight: 200;
 }
 
-.list .delete {
+.list .icons.delete {
     margin-left: auto;
 }
 
 .todo-input {
+    flex: 1;
     margin: 15px 0;
     font-weight: lighter;
     border: none;
